--- a/.github/workflows/update-manifest.yml
+++ b/.github/workflows/update-manifest.yml
@@ -20,20 +20,23 @@ jobs:
       with:
         node-version: '16'
 
+    - name: Create Manifests Directory
+      run: mkdir -p docs/manifests
+
     - name: Install Dependencies
       run: npm install axios dotenv express request cors
 
     - name: Run Update Script
       env:
-        GITHUB_API_TOKEN: ${{ secrets.GITHUB_API_TOKEN }}
-      run: node scripts/generate.js
+        GITHUB_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
+      run: node generate.js
 
     - name: Commit and Push Changes
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-        git add docs/manifests/*.json
-        git commit -m 'Update manifest files for latest releases'
+        git add docs/manifests/*.json docs/manifests/lastUpdated.txt docs/index.html docs/index.js docs/main.css
+        git commit -m 'Update manifest files for latest releases and update GitHub Pages'
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
