--- a/.github/workflows/update-manifest.yml
+++ b/.github/workflows/update-manifest.yml
@@ -39,7 +39,7 @@ jobs:
         git commit -m 'Update manifest files for latest releases and update GitHub Pages'
         git push
       env:
-        GITHUB_TOKEN: ${{ secrets.GH_API_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Trigger GitHub Pages Deployment
       run: |
@@ -48,4 +48,4 @@ jobs:
         git commit -m 'Trigger GitHub Pages rebuild'
         git push
       env:
-        GITHUB_TOKEN: ${{ secrets.GH_API_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
