--- a/.github/workflows/update-manifest.yml
+++ b/.github/workflows/update-manifest.yml
@@ -31,6 +31,9 @@ jobs:
         GITHUB_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
       run: node generate.js
 
+    - name: Pull Latest Changes
+      run: git pull origin main
+
     - name: Commit and Push Changes
       run: |
         git config --global user.name 'github-actions[bot]'
@@ -39,7 +42,7 @@ jobs:
         git commit -m 'Update manifest files for latest releases and update GitHub Pages'
         git push
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
     - name: Trigger GitHub Pages Deployment
       run: |
@@ -48,4 +51,4 @@ jobs:
         git commit -m 'Trigger GitHub Pages rebuild'
         git push
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
