--- a/.github/workflows/update-manifest.yml
+++ b/.github/workflows/update-manifest.yml
@@ -37,11 +37,13 @@ jobs:
     - name: Pull Latest Changes
       run: git pull origin main
 
+    - name: Stage All Changes
+      run: git add -A
+
     - name: Commit and Push Changes
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-        git add -f docs/manifests/*.json docs/manifests/lastUpdated.txt docs/index.html docs/index.js docs/main.css
         git commit -m 'Update manifest files for latest releases and update GitHub Pages'
         git push
       env:
